changed the playbutton style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <main class="main">
             <h1 class="Appname">K`Wood</h1>
-            <button class="PlayButton">Play</button>
+            <a href="game.html" class="PlayButton"></a>
         </main>
 
         <footer class="footer">
