added styles to mode.html

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="Background"></div>
+    <div class="Background_mainscreen"></div>
     <div class="Overlay bg"></div>
     <div class="Container">
         <header class="header">
-            <button class="Profilecontainer">Player Profile</button>
+            <button id ="profilebtn" class="Profilecontainer">Player Profile</button>
             <button class="PlayerScore">Player score</button>
         </header> 
 
         <main class="main">
             <h1 class="Appname">K`Wood</h1>
-            <a href="game.html" class="PlayButton"></a>
+            <a href="mode.html" id="playbtn" class="PlayButton">    </a>
         </main>
 
         <footer class="footer">
-            <button class="Settings_icon">Settings</button>
+            <a class="Settings_icon"></a>
         </footer>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
