--- a/mode2.html
+++ b/mode2.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Mode</title>
+    <title>mode2</title>
+    <link rel="stylesheet" href="style.css" >
 </head>
 <body>
-    <div class="Background_modeScreen"></div>
+    <div class="Background_mode2Screen"></div>
     <div class="Overlay bg"></div>
     <div class="Container">
         <header class="header">
@@ -15,28 +15,27 @@
             <button class="PlayerScore">Player Score</button>
         </header>
         <main class="mode-container">
-            
             <div class="mode-option">
-                <img src="Images/5.jpg" alt="Single Player">
-                <button class="singleplayer">Single Player</button>
+                <img src="Images/6.jpg" alt="System">
+                <button class="singleplayer">System</button>
             </div>
 
             <div class="mode-option">
-                <img src="Images/4.jpg" alt="Multi Player">
-                <button class="multiplayer">MultiPlayer</button>
+                <img src="Images/7.jpg" alt="Custom">
+                <button class="multiplayer">Custom</button>
             </div>
+
+        </div>
 
         </main>
 
         <div class="next-container">
-            <a href="mode2.html" class="next"></a>
+            <a href="game.html" class="miniplaybtn"></a>
         </div>
-
+ 
         <footer class="footer">
             <a class="Settings_icon"></a>
-
         </footer>
-    <div></div>
     
 </body>
 </html>
