--- a/frontend/login.html
+++ b/frontend/login.html
@@ -23,6 +23,6 @@
 
   <div id="message" style="margin-top:20px;color:green;"></div>
 
-  <script src="script1.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
