--- a/frontend/mode.html
+++ b/frontend/mode.html
@@ -14,33 +14,34 @@
     <div class="Container">
         <header class="header">
             <button id ="profilebtn" id="usernameDisplay" class="btn btn-primary"></button>
-            <button class="btn btn-primary"></button>
+            <button class="btn btn-primary" id="userscore">Score: </button>
         </header>
 
-        <h1 class="Appname Appname_position">K ` Wood</h1>
+        <div class="Appname Appname_position">K ` Wood</div>
 
         <main class="mode-container">
             <div class="mode-option">
-                <img src="Images/5.jpg" alt="Single Player">
+                <img src="Assets/Images/5.jpg" alt="Single Player">
                 <button id="single-player" class="singleplayer">Single Player</button>
             </div>
 
             <div class="mode-option">
-                <img src="Images/4.jpg" alt="Multi Player">
+                <img src="Assets/Images/4.jpg" alt="Multi Player">
                 <button id="multi-player" class="multiplayer">MultiPlayer</button>
             </div>
             <div id="next-btn-mode" class="next_container">
             <a class="next"></a>
-        </div>
+            </div>
 
         </main>
 
     <footer class="footer">
-            <a class="icon-btn icon-settings " aria-label="Settings"></a>
+          <!--  <a class="icon-btn icon-settings " aria-label="Settings"></a>-->
         </footer>
         </div>
 
-        <script src="script.js"></script>  
+        <script src="js/mode.js" defer></script>
+        <script src="js/common.js" defer></script>  
          
 </body>
 </html>
