Changed the desgin according to mobile screens

--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -13,7 +13,7 @@
 
     <div class="Container">
         <header class="header">
-            <a href="dashboard.html"  id ="profilebtn" class="btn btn-primary"></a>
+            <button id ="profilebtn" class="btn btn-primary"></button>
             <button class="btn btn-primary" id="userscore">Score: </button>
         </header> 
 
