--- a/frontend/mode.html
+++ b/frontend/mode.html
@@ -22,16 +22,14 @@
         <main class="mode-container">
             <div class="mode-option">
                 <img src="Assets/Images/5.jpg" alt="Single Player">
-                <button id="single-player" class="singleplayer">Single Player</button>
+                <button id="single-player" class="singleplayer">SinglePlayer</button>
             </div>
 
             <div class="mode-option">
                 <img src="Assets/Images/4.jpg" alt="Multi Player">
                 <button id="multi-player" class="multiplayer">MultiPlayer</button>
             </div>
-            <div id="next-btn-mode" class="next_container">
-            <a class="next"></a>
-            </div>
+            <div class="next" id="next-btn-mode"></div>
 
         </main>
 
