--- a/frontend/game.html
+++ b/frontend/game.html
@@ -35,9 +35,7 @@
                 <td class="song">?</td>
             </tr>
         </table>
-        <div class="hint">
-            <img class="hint_image" src="Assets/Images/hint_before.png" alt="Hint">
-        </div>
+        <div class="hint"></div>
     </main>
     <div id="countdown-overlay">
                 <span id="countdown-number">3</span>
